<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/TitleTextStyle"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/launch_title" />

        <Button
            style="@style/ButtonStyle"
            android:layout_marginTop="16dp"
            android:onClick="launchPopularMovies"
            android:text="@string/popular_movies" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="launchStockHawk"
            android:text="@string/stock_hawk" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="launchBuildItBigger"
            android:text="@string/build_it_bigger" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="launchMakeYourAppMaterial"
            android:text="@string/make_your_app_material" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="launchGoUbiquitous"
            android:text="@string/go_ubiquitous" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="launchCapstone"
            android:text="@string/capstone" />

    </LinearLayout>
</ScrollView>